[package]
name = "draw_steno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.10"
strum = "0.22.0"
strum_macros = "0.22"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"